--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ SET(CMAKE_C_COMPILER g++)
 add_compile_options(-std=c++11)
 
 # build target
-add_executable(ProtobufAutoGenerator main.cc)
+add_executable(ProtobufAutoGenerator main.cpp)
